# switchboard-functions-examples

eur-example/switchboard-function/: Cargo.toml  Dockerfile
eur-example/switchboard-function/sbv3/: .eslintrc.json  .release-please-manifest.json  .solhintignore  package.json  pnpm-workspace.yaml
eur-example/switchboard-function/sbv3/.docs/: azure-devops.md  k8s.md  sdks.md
eur-example/switchboard-function/sbv3/.docs/cli/: README.md
eur-example/switchboard-function/sbv3/.github/workflows/: evm.yml
eur-example/switchboard-function/sbv3/apps/: README.md
eur-example/switchboard-function/sbv3/apps/alerting-server/: jest.config.ts
eur-example/switchboard-function/sbv3/apps/function-manager/: Cargo.toml  Dockerfile  docker_build.sh
eur-example/switchboard-function/sbv3/apps/function-simulator/: Cargo.toml  build.rs  helm-values.yaml  package.json  startup.sh  tsconfig.json
eur-example/switchboard-function/sbv3/apps/nodejs-oracle/: Dockerfile  Dockerfile.crank  package.json  tsconfig.json
eur-example/switchboard-function/sbv3/apps/quote-verification-oracle/: Cargo.toml  Dockerfile  build.rs  docker_build.sh
eur-example/switchboard-function/sbv3/apps/secrets-server/: Cargo.toml  aks-deploy.sh  azure-setup.sh  build.rs  docker-compose.yml  helm-values.yaml  start_db.sh
eur-example/switchboard-function/sbv3/apps/task-runner-api/: README.md  jest.config.ts  package.json
eur-example/switchboard-function/sbv3/chains/aptos/: README.md
eur-example/switchboard-function/sbv3/chains/solana/: Anchor.toml  Cargo.toml  tsconfig.base.json  tsconfig.cjs.json
eur-example/switchboard-function/sbv3/devops/alerting-service/: Dockerfile  README.md  function.d.ts  package.json
eur-example/switchboard-function/sbv3/docker/: Dockerfile.gramine-dev  Dockerfile.gramine-docker  shell-exec.sh
eur-example/switchboard-function/sbv3/docker/configs/: boot.sh  get_measurement.sh  nodejs.manifest.template  seccomp.json
eur-example/switchboard-function/sbv3/javascript/aptos.js/: tsconfig.base.json
eur-example/switchboard-function/sbv3/javascript/cli/: package.json
eur-example/switchboard-function/sbv3/javascript/mercurial-stable-swap-n-pool/: README.md
eur-example/switchboard-function/sbv3/javascript/near.js/: tsconfig.json
eur-example/switchboard-function/sbv3/javascript/node/: package.json  tsconfig.json
eur-example/switchboard-function/sbv3/javascript/oracle/: docker-testing.ts
eur-example/switchboard-function/sbv3/javascript/pager-function/: .eslintrc.json  package.json  tsconfig.json
eur-example/switchboard-function/sbv3/javascript/sb-tools/: tsconfig.json
eur-example/switchboard-function/sbv3/javascript/sbv2-lite/: tsconfig.json
eur-example/switchboard-function/sbv3/javascript/solana.js/: package.json  solana.yml
eur-example/switchboard-function/sbv3/javascript/sui.js/: package.json
eur-example/switchboard-function/sbv3/javascript/task-runner/: CHANGELOG.md  README.md  tsconfig.json
eur-example/switchboard-function/sbv3/javascript/tsconfig/: base.json  commonjs.json
eur-example/switchboard-function/sbv3/rust/ecvrf/: Cargo.toml
eur-example/switchboard-function/sbv3/rust/sb-macros/: Cargo.toml
eur-example/switchboard-function/sbv3/rust/switchboard-container-utils/: package.json
eur-example/switchboard-function/sbv3/rust/switchboard-function-tools/: README.md
eur-example/switchboard-function/sbv3/rust/switchboard-node/: package.json
eur-example/switchboard-function/sbv3/rust/switchboard-node-metrics/: Cargo.toml
eur-example/switchboard-function/sbv3/rust/switchboard-solana/: Cargo.anchor27.toml  package.json
eur-example/switchboard-function/sbv3/rust/switchboard-solana-macros/: Cargo.toml  README.md
eur-example/switchboard-function/sbv3/sandbox/: README.md
eur-example/switchboard-function/sbv3/scripts/: docker-debugging.sh  sync-repos.sh
eur-example/switchboard-function/sbv3/scripts/evm/: setup.sh
eur-example/switchboard-function/sbv3/scripts/solana/: airdrop.sh
eur-example/switchboard-function/sbv3/scripts/sui/: setup.sh
eur-example/switchboard-function/sbv3/scripts/utils/: utils.sh
eur-example/switchboard-function/sbv32/: .editorconfig  .eslintignore  .gitignore  .gitmodules  README.md  copy.bara.sky  pnpm-lock.yaml  release-please-config.json  tsconfig.json  turbo.json  version
eur-example/switchboard-function/sbv32/.docs/: README.md  copybara.md  playbook.md  troubleshooting.md
eur-example/switchboard-function/sbv32/.github/workflows/: build-and-publish-docker.yml  ci.yml  copybara.yml  release-app.yml  release-node-app.yml  release-please.yaml  solana.yml
eur-example/switchboard-function/sbv32/.husky/: pre-commit  pre-receive
eur-example/switchboard-function/sbv32/apps/alerting-server/: esbuild.js  package.json  tsconfig.json
eur-example/switchboard-function/sbv32/apps/function-manager/: Cargo.toml.template  README.md  build.rs  build.sh  helm-values.yaml  new_pid_setup.sh  package.json  run.sh  switchboard.rs
eur-example/switchboard-function/sbv32/apps/function-simulator/: .gitignore  Dockerfile  README.md  get_measurement.sh  tsconfig.cjs.json
eur-example/switchboard-function/sbv32/apps/nodejs-oracle/: Dockerfile.sgx-oracle  esbuild.js
eur-example/switchboard-function/sbv32/apps/quote-verification-oracle/: Cargo.toml.template  README.md  build.sh  package.json
eur-example/switchboard-function/sbv32/apps/secrets-server/: .env  Dockerfile  dev.md
eur-example/switchboard-function/sbv32/apps/solana-function-manager/: Cargo.toml
eur-example/switchboard-function/sbv32/apps/task-runner-api/: .env  .eslintrc.json  .gitignore  Dockerfile  esbuild.js  job-directory.sh  localhost.sh  test-task-endpoint.sh  test.sh  tsconfig.json
eur-example/switchboard-function/sbv32/chains/near/: README.md
eur-example/switchboard-function/sbv32/docker/: Dockerfile.bare-metal  Dockerfile.gramine  Dockerfile.sgx-function  Dockerfile.solana
eur-example/switchboard-function/sbv32/protos/: job_schemas.proto
eur-example/switchboard-function/sbv32/scripts/: setup-deps.sh
eur-example/switchboard-function/src/: main.rs
(+1145 files in other folders)
