[workspace]

[package]
name = "oracle-function"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oracle-function"
path = "src/main.rs"

[dependencies]
bytemuck = "^1.14"
dotenv = "0.15.0"
ethabi = "18.0.0"
ethers = "0.13.0"
ethers-contract-derive = "0.13.0"
ethers-core = "0.13.0"
futures = "0.3.29"
reqwest = "0.11.23"
rust_decimal = { version = "1.33.1", features = ["maths"] }
secp256k1 = "0.28.0"
serde = "^1"
serde_derive = "1.0.194"
serde_json = "1.0.110"
solana-sdk = "1.17.12"
statistical = "1.0.0"
switchboard-solana = { version = "=0.29.79", features = ["macros", "secrets"] }
switchboard-utils = { version = "=0.9.1" }
tokio = { version= "1", features = ["full"] }
