[package]
name = "function-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "=4.4.0", features = ["openssl"] }
arrayref = "0.3.6"
ascii = "1.1.0"
async-channel = "1.5.1"
async-trait = "0.1.68"
base58 = "0.2.0"
base64 = "0.21.4"
bincode = "1.3.3"
bollard = "0.15.0"
bytemuck = "1.13.1"
cached = "0.46.0"
chrono = "0.4.24"
envy = "0.4.2"
femme = "2.2.1"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
getrandom = "0.2.8"
hex = "0.4.3"
hyper = "0.14"
ipfs-api = { version = "0.17.0", features = ["with-hyper-rustls"] }
ipfs-api-backend-hyper = "0.6"
kv-log-macro = "1.0"
lazy_static = "1.4.0"
libc = { version = "0.2.141", default-features = false }
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_std"] }
nom = "7.1.3"
num-derive = "0.3.3"
num-traits = "0.2.15"
prometheus = "0.13"
prometheus-client = "0.21.2"
regex = "1.9.5"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
sgx-quote = "0.1.0"
sgx_types = "1.1.2"
sha2 = "0.10.6"
# switchboard-common = { version = "0.11.0", features = ["client"] }
switchboard-common = { path = "../../rust/switchboard-common", features = [
    "client",
] }
sys-info = "0.9.1"
tokio = { version = "^1", features = ["full"] }
tracing-attributes = "0.1.23"
warp = "0.3"
