[package]
name = "function-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
switchboard-solana = { version = "0.29.70", path = "../../rust/switchboard-solana" }
switchboard-common = { version = "0.11.0", path = "../../rust/switchboard-common", features = [
  "client",
] }
switchboard-container-utils = { version = "*", path = "../../rust/switchboard-container-utils" }
tokio = { version = "1", features = ["full"] }
tokio-tar = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

tungstenite = { version = "0.20", features = ["native-tls"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }

warp = { version = "0.3.5", features = [
  "tls",
  "websocket",
  "tokio-tungstenite",
] }

futures-util = { version = "0.3", features = ["sink", "std"] }
futures-channel = "0.3"
url = "*"
clap = { version = "4.3", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3.2", features = ["json"] }
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1.4", features = ["v4"] }
hex = "0.4.3"
regex = "1.9.1"
miette = "5.10.0"
sha256 = "1.1.4"
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_std"] }
kv-log-macro = "1.0"
femme = "2.2.1"
bytemuck = "1.13.1"
tokio-stream = "0.1.14"
