[package]
name = "secrets-server"
version = "0.1.0"
edition = "2021"

[features]
default = []
all = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = "0.1.74"
base64 = "0.21.5"
clap = { version = "4.3", features = ["derive", "env"] }
chrono = { version = "0.4.31", features = ["serde"] }
femme = "2.2.1"
hex = "0.4.3"
kv-log-macro = "1.0"
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_std"] }
# actix-web = "4.0"
poem = { version = "1", features = ["opentelemetry"] }
poem-openapi = { version = "3", features = [
    "swagger-ui",
    "chrono",
    "uuid",
    "rust_decimal",
] }
aes-gcm = "0.10.3"
rand = "0.8.4"
ring = "0.17.5"
regex = "1.10.2"
rsa = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
sgx-dcap-quoteverify-rs = { version = "0.2.0", path = "../../rust/sgx-dcap-quoteverify-rs" }
sgx-dcap-quoteverify-sys = { version = "0.2.0", path = "../../rust/sgx-dcap-quoteverify-sys" }
sgx-quote = "0.1.0"
sha2 = "0.10.6"
digest = "0.10.7"
sqlx = { version = "0.6.0", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "time",
    "uuid",
    "json",
] }
thiserror = "1.0.49"
tokio = { version = "^1", features = ["full"] }
untrusted = "0.9.0"


[dev-dependencies]
reqwest = "0.11"
