[package]
name = "sb_macros"
version = "0.1.16"
edition = "2021"
description = "A Rust library for Switchboard macros."
readme = "README.md"
keywords = ["switchboard", "oracle", "evm", "solidity"]
homepage = "https://switchboard.xyz"
repository = "https://github.com/switchboard-xyz/evm-sdk/tree/main/rust/switchboard-evm"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
tokio = "^1"
futures = "0.3"
serde = "^1"
serde_json = "^1"
ethers = { version = "2.0.7", features = ["legacy"] }
rand = "0.8.5"
bytemuck = "1.13.1"
rust_decimal = { version = "1.30.0", features = ["maths", "serde"] }
chrono = "0.4.28"
hex = "0.4.3"
base64 = "0.21.4"
num_enum = "0.7.0"
