[package]
name = "solana-oracle"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
base64 = "0.21.5"
bollard = "0.15"
chrono = "0.4.31"
crossbeam = "0.8.2"
dashmap = { version = "5.5.3", features = ["serde"] }
dotenvy = "0.15.7"
femme = "2.2.1"
futures = "0.3"
futures-util = "0.3"
kv-log-macro = "1.0"
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_std"] }
serde = "^1"
serde_json = "^1"
switchboard-common = { features = [
    "client",
], path = "../../rust/switchboard-common" }
switchboard-container-utils = { path = "../../rust/switchboard-container-utils" }
switchboard-node = { path = "../../rust/switchboard-node" }
switchboard-solana = { path = "../../rust/switchboard-solana" }
sys-info = "0.9.1"
tokio = { version = "^1", features = ["full"] }
