[package]
name = "switchboard-node-health"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
futures-util = "0.3"
kv-log-macro = "1.0"
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_std"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3.6"
