[package]
name = "switchboard-near-contract"
version = "0.1.0"
publish = false
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arrayref = "0.3.6"
base64 = "0.13.0"
bs58 = "0.4.0"
bytemuck = "1.7.2"
digest = { version = "0.9", default-features = false }
hex = "0.4.3"
near-contract-standards = "4.0.0"
near-sdk = "4.0.0"
paste = "1.0.7"
rust_decimal = { version = "1.18.0" }
serde = "1.0.144"
serde_json = "1.0.85"
sha2 = "0.10.2"
subtle = { version = "^2.2.1", default-features = false }
zeroize = { version = "1", default-features = false }
x509-parser = { version = "0.14.0", features = ["verify"] }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
