[package]
name = "switchboard-integration-test"
version = "1.0.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0"
near-sdk = "4.0.0-pre.7"
borsh = "0.9"
near-units = "0.2.0"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tokio = { version = "1.18.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
workspaces = "0.4.0"
pkg-config = "0.3.1"
rand = "0.8.5"
switchboard = {path = "../contract/" }
bs58 = "0.4.0"
