[package]
name = "solana-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
ascii = "1.1.0"
base58 = "0.2.0"
base64 = "0.21.0"
bincode = "1.3.3"
bollard = "0.15.0"
bs58 = "0.5.0"
bytemuck = "1.14.0"
chrono = "0.4.31"
cron = "0.12.0"
crossbeam = "0.8.2"
dashmap = { version = "5.5.3", features = ["serde"] }
envy = "0.4.2"
femme = "2.2.1"
futures = "0.3"
futures-util = "0.3.28"
hex = "0.4.3"
kv-log-macro = "1.0"
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_std"] }
rand = "0.8.5"
regex = "1.9.5"
serde = "1"
serde_json = "1"
sgx-quote = "0.1.0"
sgx_types = "1.1.2"
sha2 = "0.10.6"
switchboard-common = { version = "0.10.0", features = [
    "client",
], path = "../../rust/switchboard-common" }
switchboard-solana = { version = "0.28.35", path = "../../rust/switchboard-solana" }
sys-info = "0.9.1"
tokio = { version = "1", features = ["full"] }
