[package]
name = "evm"
version = "0.2.0"
edition = "2021"

[lib]
name = "evm"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
# switchboard-common = { version = "0.11.0", features = ["client"] }
switchboard-common = { path = "../../../../rust/switchboard-common", features = [
    "client",
] }

arrayref = "0.3.6"
ascii = "1.1.0"
base58 = "0.2.0"
bollard = "0.15.0"
bincode = "1.3.3"
bs58 = "0.5.0"
bytemuck = "1.13.1"
chrono = "0.4.24"
cron = "0.12.0"
envy = "0.4.2"
ethers = { version = "2.0.3", features = ["ws", "rustls"] }
futures = "0.3"
futures-util = "0.3.28"
getrandom = "0.2.8"
hex = "0.4.3"
lazy_static = "1.4.0"
libc = "0.2.139"
num-derive = "0.4.0"
num-traits = "0.2.15"
openssl-sys = { version = "0.9.87", features = ["vendored"] }
prometheus = "0.13"
regex = "1.9.5"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = "1.0.152"
serde_json = "1.0.93"
sgx-quote = "0.1.0"
sgx_types = "1.1.2"
sha2 = "0.10.6"
tokio = { version = "1.29.1", features = ["full"] }
tracing-attributes = "0.1.23"
rand = "0.8.5"
sys-info = "0.9.1"
base64 = "0.21.4"
cached = "0.46.0"
hyper = "0.14"

# Logging
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_std"] }
kv-log-macro = "1.0"
femme = "2.2.1"

[features]
optimism = ["ethers/optimism"]
