[package]
name = "gcp"
version = "0.2.0"
edition = "2021"

[lib]
name = "gcp"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
hex = "0.4.3"
libc = "0.2.139"
num-derive = "0.3.3"
num-traits = "0.2.15"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = "1.0.152"
serde_json = "1.0.93"
sha2 = "0.10.6"
tokio = "1.26.0"
futures = "0.3"
secret-vault = { version = "1.8", features = ["gcp", "gcp-secretmanager"] }
openssl-sys = { version = "0.9.87", features = ["vendored"] }
envy = "0.4.2"

# Logging
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_std"] }
kv-log-macro = "1.0"
femme = "2.2.1"
