[package]
name = "solana"
version = "0.3.0"
edition = "2021"

[lib]
name = "solana"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
actix-web = { version = "=4.4.0", features = ["openssl"] }
arrayref = "0.3.6"
ascii = "1.1.0"
base58 = "0.2.0"
base64 = "0.21.4"
bincode = "1.3.3"
bollard = "0.15.0"
bs58 = "0.4.0"
bytemuck = "1.13.1"
cached = "0.46.0"
chrono = "0.4.24"
cron = "0.12.0"
crossbeam = "0.8.2"
dashmap = { version = "4.0.2", features = ["serde"] }
envy = "0.4.2"
femme = "2.2.1"
futures = "0.3"
futures-util = "0.3.28"
getrandom = "0.2.8"
hex = "0.4.3"
kv-log-macro = "1.0"
lazy_static = "1.4.0"
libc = "0.2.139"
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_std"] }
num-derive = "0.3.3"
num-traits = "0.2.15"
openssl-sys = { version = "0.9.87", features = ["vendored"] }
prometheus = "0.13"
rand = "0.8.5"
regex = "1.9.5"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
scopeguard = "1.2"
serde = "1.0.152"
serde_json = "1.0.93"
sgx-quote = "0.1.0"
sgx_types = "1.1.2"
sha2 = "0.10.6"
solana-sdk = ">= 1.16, < 1.17"
# switchboard-container-utils = { version = "=0.1.9" }
switchboard-container-utils = { path = "../../../../rust/switchboard-container-utils" }
# switchboard-solana = "=0.27.51"
switchboard-solana = { path = "../../../../rust/switchboard-solana" }
switchboard-common = { path = "../../../../rust/switchboard-common", features = [
    "client",
] }
sys-info = "0.9.1"
tokio = "1.29.1"
tracing-attributes = "0.1.23"
async-channel = "2.1.0"
parking_lot = "0.12.1"
