[package]
name = "solana"
version = "0.2.0"
edition = "2021"

[lib]
name = "solana"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
arrayref = "0.3.6"
ascii = "1.1.0"
base58 = "0.2.0"
base64 = "0.21.0"
bincode = "1.3.3"
bs58 = "0.4.0"
bytemuck = "1.13.1"
chrono = "0.4.25"
cron = "0.12.0"
envy = "0.4.2"
femme = "2.2.1"
futures = "0.3"
getrandom = "0.2.8"
hex = "0.4.3"
hyper = { version = "0.14.26", features = ["full"] }
ipfs-api = { version = "0.17.0", features = ["with-hyper-rustls"] }
ipfs-api-backend-hyper = "0.6"
kv-log-macro = "1.0"
lazy_static = "=1.4.0"
libc = "0.2.139"
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_std"] }
num-derive = "0.3.3"
num-traits = "0.2.15"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = "1.0.152"
serde_json = "1.0.93"
sgx-dcap-quoteverify-rs = { version = "0.2.0", path = "../../../../rust/sgx-dcap-quoteverify-rs" }
sgx-dcap-quoteverify-sys = { version = "0.2.0", path = "../../../../rust/sgx-dcap-quoteverify-sys" }
sgx-quote = "0.1.0"
sgx_types = "1.1.2"
sha2 = "0.10.6"
switchboard-solana = { path = "../../../../rust/switchboard-solana", features = [
    "ipfs",
] }
solana-sdk = { version = ">=1.16, <1.17" }
tokio = { version = "1.34.0", features = ["full", "macros"] }
tracing-attributes = "0.1.23"
