[package]
name = "evm"
version = "0.2.0"
edition = "2021"

[lib]
name = "evm"
path = "src/lib.rs"
crate-type = ["staticlib"]

[features]
optimism = ["ethers/optimism"]

[dependencies]
Inflector = "0.11"
arrayref = "0.3.6"
ascii = "1.1.0"
base58 = "0.2.0"
base64 = "0.21.0"
bincode = "1.3.3"
bs58 = "0.4.0"
bytemuck = "1.13.1"
bytes = "1.4.0"
chrono = "0.4.25"
coins-bip32 = "0.8.3"
cron = "0.12.0"
envy = "0.4.2"
ethers = { version = "2.0.7", features = ["ws", "rustls", "legacy"] }
# ethers = { version = "2.0.7", features = [ "ws", "rustls" ] }
femme = "2.2.1"
futures = "0.3"
futures-core = "0.3.28"
futures-util = "0.3.28"
getrandom = "0.2.8"
hex = "0.4.3"
hyper = { version = "0.14.26", features = ["full"] }
ipfs-api = { version = "0.17.0", features = ["with-hyper-rustls"] }
ipfs-api-backend-hyper = "0.6"
kv-log-macro = "1.0"
lazy_static = "1.4.0"
libc = "0.2.139"
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_std"] }
nom = "7.1.3"
num-derive = "0.3.3"
num-traits = "0.2.15"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = "1.0.160"
serde_json = "1.0.96"
sgx-dcap-quoteverify-rs = { version = "0.2.0", path = "../../../../rust/sgx-dcap-quoteverify-rs" }
sgx-dcap-quoteverify-sys = { version = "0.2.0", path = "../../../../rust/sgx-dcap-quoteverify-sys" }
sgx-quote = "0.1.0"
sgx_types = "1.1.2"
sha2 = "0.10.6"
switchboard-common = { version = "0.11.0", path = "../../../../rust/switchboard-common", features = [
    "client",
] }
syn = { version = "2.0", features = ["extra-traits"] }
tokio = { version = "1.26.0", features = ["full", "macros"] }
tracing-attributes = "0.1.23"
zeroize = "1.3.0"
