[package]
name = "starknet"
version = "0.2.0"
edition = "2021"

[lib]
name = "starknet"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
arrayref = "0.3.6"
ascii = "1.1.0"
base64 = "0.21.0"
bs58 = "0.4.0"
bytemuck = "1.13.1"
chrono = "0.4.25"
cron = "0.12.0"
futures = "0.3"
getrandom = "0.2.8"
hex = "0.4.3"
hyper = { version = "0.14.26", features = ["full"] }
ipfs-api = { version = "0.17.0", features = ["with-hyper-rustls"] }
ipfs-api-backend-hyper = "0.6"
lazy_static = "1.4.0"
libc = "0.2.139"
num-derive = "0.3.3"
num-traits = "0.2.15"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = "1.0.160"
serde_json = "1.0.96"
# sgx-dcap-quoteverify-rs = { version = "0.2.0", path = "../sgx-dcap-quoteverify-rs" }
# sgx-dcap-quoteverify-sys = { version = "0.2.0", path = "../sgx-dcap-quoteverify-sys" }
sgx-quote = "0.1.0"
sgx_types = "1.1.2"
sha2 = "0.10.6"
# switchboard-common = { version = "=0.8.6", path = "../../rust/switchboard-common", features = [
    # "client",
# ] }
# tokio = { version = "1.26.0", features = ["full", "macros"] }
# starknet = { git = "https://github.com/glihm/starknet-rs", branch = "abigen" }
# starknet-crypto = { git = "https://github.com/glihm/starknet-rs", branch = "abigen" }
# tracing-attributes = "0.1.23"
